--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: star-wars-translations
-  description: API to get star wars translations
+  name: my-api
+  description: My test api
 spec:
   type: openapi
   lifecycle: experimental
