--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,13 +8,9 @@ spec:
   lifecycle: experimental
   owner: marks-team
   definition: |
-    openapi: "3.0.0"
+    openapi: 3.0.0
     info:
       version: 1.0.0
       title: Marks API
     servers:
       - url: http://marks.api.com
-    paths:
-      /marks:
-        get:
-          summary: Get all Marks
