Add multiple apis in sub directories

--- a/api2/catalog-info.yaml
+++ b/api2/catalog-info.yaml
@@ -11,15 +11,15 @@ spec:
     openapi: 3.0.0
     info:
       version: 1.0.1
-      title: Marks API
+      title: API2
     servers:
-      - url: http://marks.api.com
+      - url: http://api2.api.com
     paths:
-      /marks:
+      /api1:
         get:
           summary: Get all Marks
         post:
           summary: Create a Mark
-      /people/{id}:
+      /api1/{id}:
         get:
           summary: Get a Person
