--- a/api1/catalog-info.yaml
+++ b/api1/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: my-api
-  description: My test api
+  name: api1
+  description: My API1
 spec:
   type: openapi
   lifecycle: experimental
