--- a/api2/catalog-info.yaml
+++ b/api2/catalog-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: my-api
-  description: My test api
+  name: api2
+  description: My API2
 spec:
   type: openapi
   lifecycle: experimental
