--- a/api1/catalog-info.yaml
+++ b/api1/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: marks-team
+  owner: team1
   definition: |
     openapi: 3.0.0
     info:
