Add api3 with placeholder reference to spec

--- a/api3/catalog-info.yaml
+++ b/api3/catalog-info.yaml
@@ -7,19 +7,5 @@ spec:
   type: openapi
   lifecycle: experimental
   owner: team3
-  definition: |
-    openapi: 3.0.0
-    info:
-      version: 1.0.1
-      title: API3
-    servers:
-      - url: http://api1.api.com
-    paths:
-      /api1:
-        get:
-          summary: Get all Marks
-        post:
-          summary: Create a Mark
-      /api1/{id}:
-        get:
-          summary: Get a Person
+  definition:
+    $yaml: ./openapi.yaml
